--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
 {
     "rewrites": [
+        { "source": "/static/images/:path", "destination": "https://thecommcraft.de/inconspicuousimages/:path"}
         { "source": "/(.*)", "destination": "/api/index" }
     ]
 }
