--- a/api/templates/manifest.json
+++ b/api/templates/manifest.json
@@ -4,5 +4,17 @@
     "start_url": "https://inconspicuous.thecommcraft.de/",
     "display": "standalone",
     "theme_color": "#000000",
-    "background_color": "#ffffff"
+    "background_color": "#ffffff",
+    "icons": [
+        {
+            "src": "/static/images/favicon512.png",
+            "type": "image/png",
+            "sizes": "512x512"
+        },
+        {
+            "src": "/static/images/favicon192.png",
+            "type": "image/png",
+            "sizes": "192x192"
+        }
+    ]
 }
