--- a/api/templates/manifest.json
+++ b/api/templates/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "Inconspicuous",
+    "name": "Inconspicuous - Plauderecke Online",
     "short_name": "Inconspicuous",
     "start_url": "https://inconspicuous.thecommcraft.de/",
     "display": "standalone",
