--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -5,6 +5,10 @@ on:
   pull_request:
     types: [opened, synchronize, reopened]
 
+permissions:
+  contents: write      # Allows merging pull requests
+  pull-requests: write # Allows updating and merging pull requests
+
 jobs:
   auto-merge:
     runs-on: ubuntu-latest
@@ -16,7 +20,7 @@ jobs:
         id: check_github_dir
         uses: actions/github-script@v7
         with:
-          github-token: ${{ secrets.GH_TOKEN }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
             const pr = context.payload.pull_request;
             const owner = context.repo.owner;
@@ -42,7 +46,7 @@ jobs:
         if: steps.check_github_dir.outputs.should_merge == 'true'
         uses: actions/github-script@v7
         with:
-          github-token: ${{ secrets.GH_TOKEN }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
             const pr = context.payload.pull_request;
             const owner = context.repo.owner;
